Updated baseline test for Plane Cutter
Comes after MR https://gitlab.kitware.com/vtk/vtk/merge_requests/5834

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -467,8 +467,8 @@ SET (TESTS_WITH_INLINE_COMPARES
   HyperTreeGridCellCenters.xml
   HyperTreeGridContour.xml
   HyperTreeGridDepthLimiter.xml
-  #HyperTreeGridPlaneCutter.xml
-  #HyperTreeGridThreshold.xml
+  HyperTreeGridPlaneCutter.xml
+  HyperTreeGridThreshold.xml
   LightAddRemove.xml
   LineChartSelection.xml
   LoadStateMultiView.xml
