vtkSMTransferFunctionPresetsBuiltin: make a private header
The header is not meant to be installed.

--- a/ParaViewCore/ServerManager/Rendering/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Rendering/CMakeLists.txt
@@ -96,7 +96,7 @@ add_custom_command(
           vtkSMTransferFunctionPresets JSON JSON
           "${CMAKE_CURRENT_SOURCE_DIR}/ColorMaps.json"
   COMMENT "Processing builtin color maps")
-set(headers
+set(private_headers
   "${CMAKE_CURRENT_BINARY_DIR}/vtkSMTransferFunctionPresetsBuiltin.h")
 
 vtk_object_factory_declare(
@@ -110,5 +110,4 @@ vtk_object_factory_configure(
 vtk_module_add_module(ParaView::ServerManagerRendering
   CLASSES ${classes}
   SOURCES ${vtk_object_factory_source}
-  HEADERS ${headers}
-  PRIVATE_HEADERS ${vtk_object_factory_header})
+  PRIVATE_HEADERS ${vtk_object_factory_header} ${private_headers})
