make FiltersParallelDIY2 a required dependency
FiltersParallelDIY2 is now a required dependency on all platforms
with/without MPI.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -387,10 +387,6 @@ if (PARAVIEW_USE_MPI)
     VTK::ParallelMPI
     ParaView::VTKExtensionsDefaultParallel
     ParaView::icet)
-  if (NOT WIN32)
-    list(APPEND paraview_requested_modules
-      VTK::FiltersParallelDIY2)
-  endif()
 else ()
   list(APPEND paraview_rejected_modules
     VTK::mpi)
@@ -545,6 +541,7 @@ list(APPEND paraview_requested_modules
   ParaView::VTKExtensionsPoints
   ParaView::WrapClientServer
   VTK::FiltersFlowPaths
+  VTK::FiltersParallelDIY2
   VTK::FiltersTexture
   VTK::FiltersVerdict
   VTK::IOAMR
