--- a/ParaViewCore/ServerManager/Rendering/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Rendering/CMakeLists.txt
@@ -31,6 +31,7 @@
 set(classes
   vtkPVComparativeAnimationCue
   vtkPVComparativeView
+  vtkPVEncodeSelectionForServer
   vtkPVRepresentedArrayListSettings
   vtkSMBoxRepresentationProxy
   vtkSMCameraLink
