removed restriction to 2^n cells in each direction
commit for testing ResampleToHyperTreeGrid plugin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -640,6 +640,7 @@ set(paraview_default_plugins
   GeodesicMeasurement
   GLTFReader
   GMVReader
+  HyperTreeGridADR
   LagrangianParticleTracker
   Moments
   MooseXfemClip
