--- a/Plugins/HyperTreeGridADR/CMakeLists.txt
+++ b/Plugins/HyperTreeGridADR/CMakeLists.txt
@@ -1,6 +1,5 @@
-paraview_add_plugin(HyperTreeGridAMR
+paraview_add_plugin(HyperTreeGridADR
   VERSION "1.0"
   MODULES HyperTreeGridFilters
   MODULE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/HyperTreeGridFilters/vtk.module"
-#  PYTHON_MODULES HyperTreeGridFilters
   )
