static builds + python support
Fixes to get static builds with python working again.
We need to help pvpython/pvbatch find the ParaView/VTK python packages.

--- a/Utilities/PythonInitializer/CMakeLists.txt
+++ b/Utilities/PythonInitializer/CMakeLists.txt
@@ -6,7 +6,8 @@ vtk_module_add_module(ParaView::PythonInitializer
 
 vtk_module_link(ParaView::PythonInitializer
   PRIVATE
-    ParaView::pvpythonmodules)
+    ParaView::pvpythonmodules
+    VTK::vtkpythonmodules)
 
 if (PARAVIEW_FREEZE_PYTHON)
   vtk_module_definitions(ParaView::PythonInitializer
