Introducing a new Billboard mode for Text Source representation
We introduced a new `Billboard 3D Text` mode for the Text Source representation.
This new `TextPropMode` allows to display a text attached to a point in the
3D space. The point position can be set manually or interactively using the
usual point widget.

This MR also adds XML tests for the 2D text mode (flagpole test already exists).

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -844,6 +844,8 @@ list(APPEND TESTS_WITH_BASELINES
   TimeInspector.xml
   TimeStepProgressBar.xml
   Tessellate.xml
+  Text2D.xml
+  TextBillboard3D.xml
   TextureUsages.xml
   UndoRedo.xml
   UndoRedo1.xml
