--- a/ParaViewCore/ServerManager/Default/Testing/Python/CMakeLists.txt
+++ b/ParaViewCore/ServerManager/Default/Testing/Python/CMakeLists.txt
@@ -199,3 +199,20 @@ foreach(python_state_test ${paraview_python_state_tests})
     set_tests_properties(${tname} PROPERTIES LABELS "PARAVIEW")
   endif()
 endforeach()
+
+if (PYTHON_EXECUTABLE AND NOT PARAVIEW_BUILD_SHARED_LIBS)
+  # For now, this test is only added for static builds.
+  # In theory, we can make it work in shared builds too, it just needs more work to figure out
+  # what variables need to be set on each platform correctly.
+  add_test(NAME ParaView::ServerManagerDefaultPython-TestImportVanillaInterpreter
+    COMMAND "${PYTHON_EXECUTABLE}" -m paraview.simple)
+  set_tests_properties("ParaView::ServerManagerDefaultPython-TestImportVanillaInterpreter"
+    PROPERTIES
+      LABELS "${_vtk_build_test_labels}"
+      FAIL_REGULAR_EXPRESSION "${_vtk_fail_regex}"
+      # This must match VTK_SKIP_RETURN_CODE in vtkTestingObjectFactory.h
+      SKIP_RETURN_CODE 125
+      ENVIRONMENT
+      "PYTHONPATH=${CMAKE_BINARY_DIR}/${PARAVIEW_PYTHON_SITE_PACKAGES_SUFFIX}"
+    )
+endif()
