Adding vtkRedistributeDataSetFilter to ParaView Filters

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -805,6 +805,7 @@ list(APPEND TESTS_WITH_BASELINES
   PropertyLink.xml
   QuadraticGhostCells.xml
   ReadXMLPolyDataFileSeries.xml
+  RedistributeDataSetFilter.xml
   RepresentationSelector.xml
   ResampleWithDataset.xml
   RescaleToTemporal.xml
