Refactoring view/representation caching for animation
To improve performance when playing animations when animation
caching is enabled, we now cache the geometry post-delivery rather than
pre-representation. This change allows us to skip updating
representations entirely when animation cache is being employed. This
improves animation looping once the geometry has been cached.

To support this, we make caching a responsibility of
vtkPVDataDeliveryManager. All views now use a vtkPVDataDeliveryManager
subclass to coordinate data delivery to the rendering nodes.

Representations have to ensure that they pass their prepared geometry to
the delivery manager using `vtkPVView::SetPiece` and use the
`vtkPVView::GetDeliveredPieceLOD` to get the geometry to render.

--- a/ParaViewCore/ClientServerCore/Rendering/CMakeLists.txt
+++ b/ParaViewCore/ClientServerCore/Rendering/CMakeLists.txt
@@ -57,14 +57,13 @@ set(classes
   vtkPolarAxesRepresentation
   vtkProgressBarSourceRepresentation
   vtkPVBoxChartRepresentation
-  vtkPVCacheKeeper
-  vtkPVCacheKeeperPipeline
   vtkPVCacheSizeInformation
   vtkPVClientServerSynchronizedRenderers
   vtkPVCompositeOrthographicSliceRepresentation
   vtkPVCompositeRepresentation
   vtkPVContextInteractorStyle
   vtkPVContextView
+  vtkPVContextViewDataDeliveryManager
   vtkPVDataDeliveryManager
   vtkPVDataRepresentation
   vtkPVDataRepresentationPipeline
@@ -88,6 +87,7 @@ set(classes
   vtkPVRayCastPickingHelper
   vtkPVRenderingCapabilitiesInformation
   vtkPVRenderView
+  vtkPVRenderViewDataDeliveryManager
   vtkPVRenderViewSettings
   vtkPVRepresentedDataInformation
   vtkPVSelectionInformation
@@ -117,6 +117,7 @@ if (TARGET VTK::ParallelMPI AND TARGET ParaView::icet)
 endif ()
 
 set(headers
+  vtkPVDataDeliveryManagerInternals.h
   vtkStreamingPriorityQueue.h)
 
 set(private_headers
