--- a/Plugins/HyperTreeGridADR/HyperTreeGridFilters/CMakeLists.txt
+++ b/Plugins/HyperTreeGridADR/HyperTreeGridFilters/CMakeLists.txt
@@ -1,21 +1,23 @@
 set(classes
   vtkAbstractAccumulator
   vtkAbstractArrayMeasurement
-  vtkArithmeticAccumulator
   vtkArithmeticMeanArrayMeasurement
-  vtkBinsAccumulator
   vtkEntropyArrayMeasurement
+  vtkFunctor
   vtkGeometricMeanArrayMeasurement
   vtkHarmonicMeanArrayMeasurement
   vtkQuantileAccumulator
   vtkQuantileArrayMeasurement
-  vtkFunctionOfXList
   vtkResampleToHyperTreeGrid
   vtkStandardDeviationArrayMeasurement)
 
+set(template_classes
+  vtkArithmeticAccumulator
+  vtkBinsAccumulator)
+
 vtk_module_add_module(HyperTreeGridFilters
   CLASSES ${classes}
-  HEADERS ${headers})
+  TEMPLATE_CLASSES ${template_classes})
 
 paraview_add_server_manager_xmls(
   XMLS  HyperTreeGridFilters.xml)
