Making the ImageData to UniformGrid filter shown in the GUI

--- a/Applications/ParaView/Testing/XML/CMakeLists.txt
+++ b/Applications/ParaView/Testing/XML/CMakeLists.txt
@@ -760,6 +760,7 @@ list(APPEND TESTS_WITH_BASELINES
   HideAll.xml
   HorizontalColorLegendTitle.xml
   IgnoreLogAxisWarning.xml
+  ImageDataToUniformGrid.xml
   ImageVolumeRendering.xml
   InteractiveSelection.xml
   InteractiveViewLinkOffscreen.xml
