remove the deprecated user facing UIs for Cinema and Catalyst
Was deprecated in 5.6 and replaced with Export Inspector panel
combined with the Export Catalyst Script and Export Now reactions.

--- a/Qt/Components/CMakeLists.txt
+++ b/Qt/Components/CMakeLists.txt
@@ -249,37 +249,6 @@ set(ui_files
   Resources/UI/pqTimerLogDisplay.ui
   Resources/UI/pqViewFrame.ui)
 
-set(sources)
-set(private_headers
-  pqSGExportStateWizardInternals.h)
-
-if (TARGET ParaView::pqPython)
-  # code for generating specialized Python scripts
-  # from the GUI using trace information
-  list(APPEND classes
-    pqCatalystExportStateWizard
-    pqCinemaConfiguration
-    pqCinemaTrack
-    pqImageOutputInfo
-    pqSGExportStateWizard
-    pqSGPluginManager
-    pqSGWritersMenuManager)
-  list(APPEND sources
-    pqCinemaTrackSelection.cxx
-    pqExportViewSelection.cxx)
-  list(APPEND private_headers
-    pqCinemaTrackSelection.h
-    pqExportViewSelection.h)
-
-  list(APPEND ui_files
-    Resources/UI/pqCinemaConfiguration.ui
-    Resources/UI/pqCinemaTrack.ui
-    Resources/UI/pqCinemaTrackSelection.ui
-    Resources/UI/pqExportStateWizard.ui
-    Resources/UI/pqExportViewSelection.ui
-    Resources/UI/pqImageOutputInfo.ui)
-endif ()
-
 set(resource_files
   Resources/pqComponents.qrc)
 
@@ -299,28 +268,9 @@ set(CMAKE_AUTOUIC_SEARCH_PATHS "${CMAKE_CURRENT_SOURCE_DIR}/Resources/UI")
 vtk_module_add_module(ParaView::pqComponents
   CLASSES ${classes}
   HEADERS ${headers}
-  SOURCES ${sources}
-          ${ui_files}
-          ${resource_files}
-  PRIVATE_HEADERS ${private_headers})
+  SOURCES ${ui_files}
+          ${resource_files})
 vtk_module_link(ParaView::pqComponents
   PRIVATE
     Qt5::Network
     Qt5::Widgets)
-
-if (PARAVIEW_ENABLE_PYTHON)
-  # The pqSGExportStateWizard has subclasses that directly access the UI file,
-  # and currently we don't have a clean way to break this hard dependency, so
-  # for now we manually install this ui file.
-  get_property(generator_is_multi_config GLOBAL
-    PROPERTY GENERATOR_IS_MULTI_CONFIG)
-  if (generator_is_multi_config)
-    set(ui_pqExportStateWizard_path
-      "${CMAKE_CURRENT_BINARY_DIR}/pqComponents_autogen/include_$<CONFIG>/ui_pqExportStateWizard.h")
-  else ()
-    set(ui_pqExportStateWizard_path
-      "${CMAKE_CURRENT_BINARY_DIR}/pqComponents_autogen/include/ui_pqExportStateWizard.h")
-  endif ()
-  vtk_module_install_headers(
-    FILES "${ui_pqExportStateWizard_path}")
-endif ()
